--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,7 +24,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
@@ -65,6 +64,15 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+
+@keyframe spin{
+  to { transform: rotate(360deg);}
+}
+
+.animate-spin{
+  animation: spin 1s linear infinite
 }
 
 @tailwind base;
